Updated small details

--- a/resources/settings.json
+++ b/resources/settings.json
@@ -1,7 +1,7 @@
 {
     "discord": {
         "owner": "",
-        "token": "Njg4Nzc2MzkzNDUwMTkyOTUz.Xm5PAQ.BqzRQvTbWkHqdaPbi1o50CAvdK8"
+        "token": "InsertTokenHere"
     }
 
 }
